# aitrios-rpi-sample-app-gui-tool-client

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
tests/devices/: test_aicamera.py
tests/models/: test_post_processors.py  test_results_classifications.py  test_results_detections.py
unify/devices/: device.py  frame.py
unify/devices/ai_camera/: __init__.py  ai_camera.py
unify/models/: __init__.py  model.py  results.py
unify/models/post_processors/: __init__.py  post_processors.py
unify/models/post_processors/posenet_decoder/: Makefile  decoder_interfaces.py  posenet_binding.cpp  posenet_binding.h  posenet_decoder.cpp  posenet_decoder.h
