[tool.poetry]
name = "unify"
version = "0.3.5"
description = ""
authors = [
    "Stijn Woestenborghs <stijn.woestenborghs@sony.com>",
    "Alexander Jaworowski <alexander.jaworowski@sony.com>",
    "Kamil Tomaszewski <kamil.tomaszewski@sony.com>",
    "Karl Komierowski <karl.komierowski@sony.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "<2.0.0"
opencv-python = ">=4.5.3.56"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.venv
  | tests
)/
'''

[tool.pytest.ini_options]
addopts = "--cov='unify' --cov-report=term-missing:skip-covered -s"
python_files = ["tests/*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "aicam"
]